# yab

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  install-valgrind.sh  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
benches/: fib.rs
crates/yab/: Cargo.toml  README.md
crates/yab/src/: bencher.rs  cachegrind.rs  id.rs  lib.rs  macros.rs  options.rs  output.rs  reporter.rs  utils.rs
crates/yab/src/reporter/: baseline.rs  mod.rs  printer.rs  seq.rs
crates/yab/tests/: version_match.rs
e2e-tests/: Cargo.toml
e2e-tests/benches/: all.rs
e2e-tests/benches/all/: breakdown.baseline.json  cmp.baseline.json  main.baseline.json
e2e-tests/src/: exporter.rs  lib.rs  main.rs
e2e-tests/tests/: cli.rs  integration.rs
e2e-tests/tests/snapshots/: all-stats.json
search.desc/yab/: yab-desc-0-.js
search.index/: 07ebb0df0a15.js  09708eb0dcbf.js  0c4930e5c4ad.js  2332c9112b89.js  251088a18c70.js  2866c7c3b13c.js  2c029bd3db0d.js  2c2305892cb6.js  44972067c245.js  48f65d0ac440.js  554c19000156.js  672fdd1b1bd2.js  6aa26f170209.js  7064db6aaf6c.js  774c72314229.js  root.js
search.index/crateNames/: 55882b86cfee.js
search.index/desc/: 51b59e1f28c3.js
search.index/entry/: 76ccdc68002f.js
search.index/function/: deb874ed44d6.js
search.index/generic_inverted_index/: ed51320549d0.js
search.index/name/: 6d9982a73c01.js
search.index/normalizedName/: d6179e365503.js
search.index/path/: 5ff0e1e1cc99.js
search.index/type/: 9681eacebe20.js
src/: cachegrind.rs  id.rs  lib.rs  options.rs  output.rs  reporter.rs
src/yab/: bencher.rs.html  cachegrind.rs.html  id.rs.html  lib.rs.html  macros.rs.html  options.rs.html  utils.rs.html
src/yab/reporter/: baseline.rs.html  mod.rs.html  printer.rs.html  seq.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Mul.js  trait.Sub.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/serde_core/de/: trait.Deserialize.js
trait.impl/serde_core/ser/: trait.Serialize.js
trait.impl/yab/reporter/: trait.TestReporter.js
yab/: all.html  enum.BenchMode.html  enum.CachegrindStats.html  fn.black_box.html  index.html  macro.captures!.html  macro.captures.html  macro.main.html  sidebar-items.js  struct.AccessSummary.html  struct.Bencher.html  struct.BenchmarkId.html  struct.CachegrindDataPoint.html  struct.CachegrindFunction.html  struct.CachegrindOutput.html  struct.Capture.html  struct.CaptureGuard.html  struct.FullCachegrindStats.html
yab/bencher/: enum.BenchMode.html  struct.Bencher.html
yab/cachegrind/: enum.CachegrindStats.html  struct.AccessSummary.html  struct.CachegrindDataPoint.html  struct.CachegrindFunction.html  struct.CachegrindOutput.html  struct.Capture.html  struct.CaptureGuard.html  struct.FullCachegrindStats.html
yab/id/: struct.BenchmarkId.html
yab/reporter/: index.html  sidebar-items.js  struct.BenchmarkOutput.html  trait.BenchmarkReporter.html  trait.Logger.html  trait.Reporter.html  trait.TestReporter.html
