[workspace]
members = ["crates/yab", "e2e-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/yab"

[workspace.dependencies]
anstream = "1.0.0"
anstyle = "1.0.13"
assert_matches = "1.5.0"
clap = "4.5.59"
crabgrind = "0.2.4"
doc-comment = "0.3.4"
num_cpus = "1"
rand = "0.10.0"
regex = "1.12.3"
serde = "1"
serde_json = "1"
styled-str = { version = "=0.5.0-beta.1", git = "https://github.com/slowli/term-transcript", rev = "3b948fecca17eb87222f05907fe4235f3929ed96" }
thiserror = "2.0"
tempfile = "3.25.0"
term-transcript = { version = "=0.5.0-beta.1", git = "https://github.com/slowli/term-transcript", rev = "3b948fecca17eb87222f05907fe4235f3929ed96" }
version-sync = "0.9.5"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
