[workspace]
members = ["crates/yab", "e2e-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/yab"

[workspace.dependencies]
anes = "0.2"
assert_matches = "1.5.0"
clap = "4.6.0"
crabgrind = "0.2.4"
doc-comment = "0.3.4"
num_cpus = "1"
once_cell = "1.21.4"
rand = "0.10.1"
regex = "1.12.3"
serde = "1"
serde_json = "1"
thiserror = "2.0"
tempfile = "3.27.0"
term-transcript = "=0.5.0-beta.1"
version-sync = "0.9.5"
