[package]
name = "yab-e2e-tests"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true

yab = { path = "../crates/yab", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true

[[bench]]
name = "fib"
harness = false
