[package]
name = "yab-e2e-tests"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rand = { workspace = true, features = ["small_rng"] }
serde_json.workspace = true

yab = { path = "../crates/yab" }
serde = { workspace = true, features = ["derive"] }
regex.workspace = true

[dev-dependencies]
once_cell.workspace = true
tempfile.workspace = true
term-transcript.workspace = true

[features]
instrumentation = ["yab/instrumentation"]

[[bench]]
name = "all"
harness = false
