[package]
name = "yab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
# Private dependencies (not exposed in public crate APIs)
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
crabgrind = { workspace = true, optional = true }
anes.workspace = true
num_cpus.workspace = true
thiserror.workspace = true

# Enables serialization for benchmark outputs.
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
assert_matches.workspace = true
serde_json.workspace = true

[features]
default = []
# Enables cachegrind instrumentation. Allows to get more precise results, but requires
# cachegrind >=3.22.0.
instrumentation = ["dep:crabgrind"]
