[package]
name = "yab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["benchmark", "profiler", "cachegrind"]
categories = ["development-tools::profiling"]
description = "Yet Another Benchmarking framework powered by `cachegrind`"

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
# Private dependencies (not exposed in public crate APIs)
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
crabgrind = { workspace = true, optional = true }
anes.workspace = true
num_cpus.workspace = true
regex.workspace = true
thiserror.workspace = true

# Enables serialization for benchmark outputs.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
assert_matches.workspace = true
doc-comment.workspace = true
serde_json.workspace = true
version-sync.workspace = true

[features]
default = []
# Enables cachegrind instrumentation. Allows to get more precise results, but requires
# cachegrind >=3.22.0.
instrumentation = ["dep:crabgrind"]
